Refactor Code and Add Unit tests

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1574,3 +1574,7 @@ body {
 	margin-bottom: 5px;
 	text-align: center;
 } /* /Toaster custom style full width on top */
+
+.invalid-feedback {
+	display: block;
+}
