--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1570,11 +1570,202 @@ body {
 
 .Toastify__toast {
 	min-height: 55px;
-	padding: 8px 15px 0;
+	padding: 0px 15px 0;
 	margin-bottom: 5px;
 	text-align: center;
-} /* /Toaster custom style full width on top */
-
-.invalid-feedback {
-	display: block;
 }
+.Toastify__close-button {
+	margin-top: 8px;
+} /* /Toaster custom style full width on top */
+/* SearchFilters selected-filters */
+.selected-filters-header {
+	&:after {
+		content: '';
+		display: table;
+		clear: both;
+	}
+	button {
+		float: right;
+		background: transparent;
+		border: 0;
+		outline: 0;
+		box-shadow: none;
+		padding: 0;
+		font-weight: 700;
+	}
+}
+.selected-filters {
+	list-style-type: none;
+	margin: 0 -0.25rem;
+	padding: 0;
+
+	li {
+		display: inline-block;
+		margin: 0;
+		padding: 0.25rem 0.25rem;
+
+		> div {
+			border: 1px solid #888;
+			height: 32px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			padding: 0 8px;
+			background: #ebf2ff;
+			margin: 0;
+
+			span {
+				font-weight: 600;
+
+				b {
+					font-weight: 700;
+				}
+
+			}
+
+			button {
+				border: 0;
+				padding: 0;
+				background: transparent;
+				outline: 0;
+				box-shadow: none;
+				margin: 0 0 0 0.5rem;
+				color: #dc3545;
+			}
+
+		}
+
+	}
+
+}
+/* /SearchFilters selected-filters */
+/* data-footer */
+.data-footer {
+	padding: 1rem 0;
+	background: rgba(255, 255, 255, 0.9);
+
+	.hand-limit {
+		margin: 0rem 1rem 0;
+		display: flex;
+		align-items: center;
+		float: right;
+
+		@media (max-width: 767px) {
+			justify-content: center;
+			margin-top: 0.5rem;
+			margin-right: auto;
+			margin-left: auto;
+			font-size: 0.7rem;
+		}
+
+		label {
+			margin: 0 0.25rem;
+		}
+
+		select {
+			min-width: 60px;
+
+			&.form-control:not([size]):not([multiple]) {
+				height: 35px;
+			}
+
+			@media (max-width: 767px) {
+				min-width: 54px;
+
+				&.form-control:not([size]):not([multiple]) {
+					height: 28px;
+					padding-top: 0;
+					padding-bottom: 0;
+				}
+
+			}
+
+		}
+
+	}
+
+	.pagination {
+		margin: 0 0 0;
+
+		@media (max-width: 991px) {
+			margin-right: auto;
+			margin-left: auto;
+			justify-content: center;
+		}
+
+		@media (min-width: 992px) {
+			float: right;
+		}
+
+	}
+
+	.start-toend {
+		line-height: 35px;
+
+		p {
+			margin: 0;
+		}
+
+		@media (max-width: 767px) {
+			margin-top: 0.5rem;
+			line-height: 28px;
+			font-size: 0.7rem;
+		}
+
+	}
+
+}
+.pagination-fixed {
+
+	.data-footer {
+		position: fixed;
+		bottom: 0;
+		right: 30px;
+		left: 260px;
+
+		@media (max-width: 991px) {
+			right: 1rem;
+			left: 1rem;
+		}
+
+	}
+
+	.listbox {
+		margin-bottom: 67px;
+
+		@media (max-width: 991px) {
+			margin-bottom: 103px;
+		}
+
+	}
+
+}
+
+.help {
+	position: absolute;
+	top: 50%;
+	right: 1rem;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	z-index: 2;
+
+	&.help-page {
+		right: 0;
+		top: -40px;
+	}
+
+	button {
+		background: transparent;
+		outline: 0;
+		border: 0;
+		box-shadow: none;
+	}
+
+	svg {
+		width: 19px;
+		height: 19px;
+		fill: #999999;
+	}
+
+}
+/* /data-footer */
